TG-32: Added basic input fields (nonfunc), fixed overlap with nav bar

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,18 +34,36 @@ body {
 	max-height: 300px;
 	margin-top: 25px;
 	box-shadow: 5px 5px 15px black;
+	margin: auto;
+	margin-top: 5px;
+	
+	width: 100%;
+}
+
+#resInputs {
+
+	padding: 0;
+	display: inline;
+	width: 100%;
+}
+
+.inputBtnSet1 {
+
+	width: 18.9%;
+	padding: 0;
+	margin: 0;
 }
 
 #rms {
-	padding-top: 20px;
+
 	user-select: none;
 	display: block;
 	height: auto;
-	max-height: 300px;
-	width: 50%;
+	max-height: 200px;
+	width: 100%;
 	margin: auto;
 	margin-top: 0;
-	transform: scale(1.5);
+	//transform: scale(1.5);
 	//pointer-events: none;
 }
 
